--- a/flaskdeadline/templates/new_staff.html
+++ b/flaskdeadline/templates/new_staff.html
@@ -10,6 +10,11 @@
 {%endblock header%}
 
 {% block content %}
+<div class="btn-toolbar">
+    <div class="btn-group">
+    <a type="button" class="btn btn-sm btn-primary mb-3" href="/staff/scheduling">Scheduling and Workload Analysis</a>
+    </div>
+</div>
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-2 border-bottom">
     <h6>Your Modules</h6> 
  </div>
@@ -138,13 +143,15 @@
             </h6>
             {% endfor %}
             </div>
-            {%for module in avail_modules%}
-                {%if module.title == title%}
             <div class = "col-lg d-flex mb-1 mt-1">
-                <h6><u>Details of Module:</u><br> {%if module.content%}{{module.content}}{%endif%}</h6>
-            </div>
-                {%endif%}
+            {%for module in avail_modules%}
+                {%for cwk in module.module_cw%}
+                    {%if cwk.title == cw and cwk.module.title == title%}
+                    <h6 class="detail-content"><u>Details of Module:</u><br>Worth <a href='/staff/cw/edit/{{title}}/{{cw}}'>{{cwk.breakdown}}%</a> of Module<br>Start Date: {{start[title][cw].strftime('%d %b, %Y / Time: %H:%M')}}<br>{%if module.content%}{{module.content}}{%endif%}</h6>
+                    {%endif%}
+                {%endfor%}
             {% endfor %}
+        </div>
         </div>
     </div>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-1 mt-1 mb-1 text-muted text-uppercase"></h6>
@@ -165,11 +172,7 @@
             <i class="bi bi-mortarboard-fill" style="font-size: 1rem;"> - Indicate GTA voted for this deadline</i>
         </div>
     </div>
-    <div class="btn-toolbar">
-        <div class="btn-group">
-        <a type="button" class="btn btn-sm btn-primary mb-3" href="/staff/scheduling">Scheduling and Workload Analysis</a>
-        </div>
-    </div>
+    
 
 {%endblock content%}
 
@@ -192,7 +195,7 @@
               </h6>
             {%for module in taking%}
                 <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/staff/remove/{{module.title}}">
+                <a class="nav-link" aria-current="page" href="">
                 <span data-feather="book-open" class="align-text-bottom"></span>
                     {{module.id}} - {{module.title}}
                 </a>
@@ -203,7 +206,7 @@
               </h6>
                 {%for avail in avail_modules%}
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="">
+                        <a class="nav-link" aria-current="page" href="/staff/subscribe/{{avail.id}}">
                         <span data-feather="book" class="align-text-bottom"></span>
                         {{avail.id}} - {{avail.title}}
                         </a>
@@ -216,34 +219,3 @@
         </div>
     </nav>
 {%endblock mods%}
-
-{% block graph %}
-<!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-<script>
-const ctx = document.getElementById('myChart')
-    // eslint-disable-next-line no-unused-vars
-const myChart = new Chart(ctx, {
-  type: 'line',
-  data: {
-    labels: [2,3,4,5,6,7],
-    datasets: [{
-        data: [1,2,3,4,5,6],
-        label: "Alberta",
-        borderColor: "#3e95cd",
-        fill: false
-      }
-    ]
-  },
-  options: {
-    title: {
-      display: true,
-      text: 'Positive Cases of COVID in provinces of Canada'
-    },
-    hover: {
-     mode: 'index',
-     intersect: true
-    },
-  }
-});
-</script> -->
-{%endblock graph%}
